k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: iwtc-frontend
    namespace: iwtc
spec:
    ingressClassName: traefik
    rules:
        - host: iwtc.ddongmy.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: iwtc-frontend
                            port:
                                number: 80
    tls:
        - hosts:
              - iwtc.ddongmy.com
          secretName: iwtc-frontend-tls
